pimp my site...

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -12,7 +12,7 @@
 			<hr>
 			<div class="card">
 				<div class="card-header">
-					<h5 class="m-0 font-weight-bold text-primary">Habilidades</h5>
+					<h5 class="m-0 font-weight-bold text-primary">Skills</h5>
 				</div>
 				<div class="card-body d-flex flex-wrap align-items-baseline" id="skills">
 					{{>skills}}
@@ -20,7 +20,7 @@
 			</div>
 			<div class="card">
 				<div class="card-header">
-					<h5 class="m-0 font-weight-bold text-primary">Experiencia Laboral</h5>
+					<h5 class="m-0 font-weight-bold text-primary">Work Expertise</h5>
 				</div>
 				<div class="card-body">
 					<ul class="list-group">
@@ -30,7 +30,7 @@
 			</div>			
 			<div class="card">
 				<div class="card-header">
-					<h5 class="m-0 font-weight-bold text-primary">Educación</h5>
+					<h5 class="m-0 font-weight-bold text-primary">Degrees</h5>
 				</div>
 				<div class="card-body">
 					{{>degrees}}
@@ -38,7 +38,7 @@
 			</div>								
 			<div class="card">
 				<div class="card-header">
-					<h5 class="m-0 font-weight-bold text-primary">Capacitación constante en línea</h5>
+					<h5 class="m-0 font-weight-bold text-primary">Constant Online Improvement</h5>
 				</div>
 				<div class="card-body">
 					<ul class="list-group">
@@ -50,7 +50,7 @@
 		<!--PDF-->		
 		<div class="col-md-12 mb-5 text-center">
 			<button type="button" class="btn btn-primary" id="downloadPDF" data-id="{{userInfo._id}}"><span
-					class="glyphicon glyphicon-cloud-download"></span>Descargar CV como PDF</button>
+					class="glyphicon glyphicon-cloud-download"></span>Download CV as PDF file</button>
 		</div>
 	</div>
 </div>
