--- a/src/views/partials/workExpertise.hbs
+++ b/src/views/partials/workExpertise.hbs
@@ -3,9 +3,9 @@
         <li class="list-group-item">
             <strong>{{title}}</strong>
             <br>
-            <strong><em>Descripción</em></strong>
+            <strong><em>Description...</em></strong>
             <blockquote>
-                <p>
+                <p class="font-italic">
                     {{description}}
                 </p>
                 <footer class="font-italic text-small">
