--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -14,7 +14,7 @@
 	font-size: 1.5em;		
 }
 .skills{
-	border: 1px solid coral;
+	border: 1px solid #adb5bd;
 	border-radius: 5px;
 	background: white;
 	padding: 5px;
