--- a/src/views/partials/courses.hbs
+++ b/src/views/partials/courses.hbs
@@ -1,8 +1,8 @@
 {{#if courses}}
     {{#each courses}}
         <li class="list-group-item">
-            {{courseDescription}}
             <strong><em><a target="_blank" href="{{courseInsitutionURL}}">{{courseInstitution}}</a></em></strong>
+            <p class="font-italic">{{courseDescription}}</p>
         </li>
     {{/each}}
 {{/if}}
