--- a/src/views/partials/workExpertise.hbs
+++ b/src/views/partials/workExpertise.hbs
@@ -1,7 +1,7 @@
 {{#if workExperience}}
     {{#each workExperience}}
         <li class="list-group-item">
-            <strong>{{title}}</strong>
+            <strong>{Job title: {{title}}</strong><br><strong>Company name: {{company}}</strong>
             <br>
             <strong><em>Description...</em></strong>
             <blockquote>
